[package]
name = "newsposter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surf = "2.3.2"
tiny-tokio-actor = "0.3.3"
tokio = { version = "1", features = ["full"] }
